kubernetes-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: backend
  clusterIP: None # Headless service for communication with frontend
